# StarshipGame

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/component/ui/: Button.cpp  Button.hpp  PlayButton.cpp  PlayButton.hpp
src/engine/: Anchor.hpp  Engine.cpp  Engine.hpp
src/screens/: EncounterScreen.cpp  EncounterScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  Screen.hpp
